--- a/package.json
+++ b/package.json
@@ -11,12 +11,19 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.439.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.26.0",
     "react-slick": "^0.30.2",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
+    "typing-animation": "^1.0.13"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
